fix: x-overflow gh-fork button

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -54,30 +54,30 @@ footer.site-footer {
     margin-bottom: -100px;
     transform: translateY(-200px);
   }
-}
-.triangle {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width:  0 0 100px 100px;
-  border-color: transparent transparent $secondary ;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 101;
-  svg {
-    width: 3em;
-    height: 3em;
+  .triangle {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width:  0 0 100px 100px;
+    border-color: transparent transparent $secondary ;
     position: absolute;
-    left: -55px;
-    top: 45px;
-    z-index: 99999;
-    transform: rotate(-45deg);
-    color: white;
-  }
-  transition: transform .1s ease-out;
-  transform-origin: bottom right;
-  &:hover {
-    transform: scale(1.05);
+    bottom: 0;
+    right: 0;
+    z-index: 101;
+    svg {
+      width: 2.5em;
+      height: 2.5em;
+      position: absolute;
+      left: -48px;
+      top: 45px;
+      z-index: 99999;
+      transform: rotate(-45deg);
+      color: white;
+    }
+    transition: transform .1s ease-out;
+    transform-origin: bottom right;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
